RESOLVED FIXED17799
WebView signals should use more specific types
https://bugs.webkit.org/show_bug.cgi?id=17799
Summary WebView signals should use more specific types
Tommi Komulainen
Reported 2008-03-12 10:59:23 PDT
The signals "script-alert", "script-confirm", "script-script-prompt" are using G_TYPE_OBJECT as the type for the WebFrame argument. This causes generated documentation to document the type as GObject rather than WebkitWebFrame, so it would be better to use the more specific type instead.
Attachments
Fix types of signal parameters (1.98 KB, patch)
2008-03-12 11:01 PDT, Tommi Komulainen
alp: review+
Tommi Komulainen
Comment 1 2008-03-12 11:01:08 PDT
Created attachment 19703 [details] Fix types of signal parameters
Alp Toker
Comment 2 2008-03-12 12:41:46 PDT
Landed in r31004.
Note You need to log in before you can comment on or make changes to this bug.