2008-03-12  Tommi Komulainen  <tommi.komulainen@iki.fi>

Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=17799
        WebView signals should use more specific types

        * webkit/webkitwebview.cpp: Use WEBKIT_TYPE_WEB_FRAME argument
        type in "script-alert", "script-confirm", "script-script-prompt"
        signals so that it gets more clearly documented rather than just
        plain GObject.


Canonical link: https://commits.webkit.org/24687@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@31004 268f45cc-cd09-0410-ab3c-d52691b4dbfc